# CSMoE-QtLauncher

./: CMakeLists.txt  QtGuiApplication1.cpp  QtGuiApplication1.h  QtGuiApplication1.qrc  QtGuiApplication1.ui  README.md  main.cpp
Controller/: GameDirController.cpp  GameLaunchController.cpp  GameModeController.cpp  GameSettingsController.cpp  MapListController.cpp
Model/: GameDir.h  GameModeList.cpp  GameModeList.h  GameSettings.cpp  GameSettings.h
Platform/: TouchBar.h  TouchBar.mm
Resources/: Airport.tiff  DisplaysPrefIcon.tiff  EnergySaverIcon.tiff  ExtensionsPref.tiff  FMF.tiff  FMM.tiff  GKEventIcon.tiff  Keyboard.tiff  LogOut.tiff  MouseTrackpad.tiff  Network.tiff  Restart.tiff  SoftwareUpdatePreferencePaneIcon.tiff  SoundPrefIcon.tiff  SpeakableItems.tiff  SystemPreferences_Accounts-dark.tiff  SystemPreferences_Accounts.tiff  SystemPrefs_Localization.tiff  UniversalAccessPrefIcon.tiff  personCard.tiff  privacy-accessibilityservices.tiff
cmake/DragNDrop/: DS_Store
